Create main html divs
There are 6 primary html divs that divide the content of the page:

1) header
2) sign-up
3) info
4) quote
5) call-to-action
6) footer

They each constitute a different section of the webpage.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     </head>
 
     <body>
-        
+
+        <div id="header">
+
+        </div>
+
+        <div id="sign-up">
+
+        </div>
+
+        <div id="info">
+
+        </div>
+
+        <div id="quote">
+
+        </div>
+
+        <div id="call-to-action">
+
+        </div>
+
+        <div id="footer">
+            
+        </div>
+
     </body>
 
 </html>
