--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <body>
 
         <div id="header">
+            <div id="header-logo">
 
+            </div>
+            <ul id="nav">
+                <li class="nav-item"></li>
+                <li class="nav-item"></li>
+                <li class="nav-item"></li>
+            </ul>
         </div>
 
         <div id="sign-up">
@@ -29,7 +36,7 @@
         </div>
 
         <div id="footer">
-            
+
         </div>
 
     </body>
