Create html structure of sign up section
The left side of the sign up section will have a heading, paragraph of
text, and sign up button. The right side will have some image.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
         </div>
 
         <div id="sign-up">
-
+            <div class="left-side">
+                <h1 class="heading">
+                    This website is awesome
+                </h1>
+                <p class="paragraph">
+                    This website has some subtext that goes here under the main title.
+                     It's a smaller font and the color is lower contrast.
+                </p>
+                <button class="sign-up-button">
+                    Sign up
+                </button>
+            </div>
+            <div class="right-side">
+                <img src="">
+            </div>
         </div>
 
         <div id="info">
