--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
         </div>
 
         <div id="info">
-
+            <h1 class="heading">
+                Some random information.
+            </h1>
+            <div id="info-figures">
+                <div class="info-figure">
+                    <img src="">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-figure">
+                    <img src="">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-figure">
+                    <img src="">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-figure">
+                    <img src="">
+                    <p class="subtext">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
         </div>
 
         <div id="quote">
