--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
             </div>
             <ul id="nav">
-                <li class="nav-item"></li>
-                <li class="nav-item"></li>
-                <li class="nav-item"></li>
+                <li class="nav-item"><a href="">header link one</a></li>
+                <li class="nav-item"><a href="">header link one</a></li>
+                <li class="nav-item"><a href="">header link one</a></li>
             </ul>
         </div>
 
