--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
         </div>
 
         <div id="quote">
-
+            <p id="quote-text">
+                This is an inspiring quote, or a testimonial from a customer.
+                 Maybe it's just filling up space, or maybe people will actually read it. 
+                 Who knows? All I know is that it looks nice.
+            </p>
+            <p id="quote-author">
+                -Thor, God of Thunder
+            </p>
         </div>
 
         <div id="call-to-action">
