Create html structure for call to action section
Contains a heading, text paragraph, and a sign up button.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
         </div>
 
         <div id="footer">
-
+            <div class="left-side">
+                <h1 class="heading">
+                    Call to action! It's time!
+                </h1>
+                <p class="paragraph">
+                    Sign up for our product by clicking that button right over there!
+                </p>
+            </div>
+            <div class="right-side">
+                <button class="sign-up-button">
+                    Sign up
+                </button>
+            </div>
         </div>
 
     </body>
