--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <div id="header">
             <div id="header-logo">
-
+                Header Logo
             </div>
             <ul id="nav">
                 <li class="nav-item"><a href="">header link one</a></li>
