Create html structure of footer
The footer is simple. It's just a small line of text with copyright
information.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div id="footer">
-            
+            Copyright © The Odin Project 2021
         </div>
 
     </body>
