Fix typo with header links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             <ul id="nav">
                 <li class="nav-item"><a href="">header link one</a></li>
-                <li class="nav-item"><a href="">header link one</a></li>
-                <li class="nav-item"><a href="">header link one</a></li>
+                <li class="nav-item"><a href="">header link two</a></li>
+                <li class="nav-item"><a href="">header link three</a></li>
             </ul>
         </div>
 
