Add images folder and add image to sign-up section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </button>
             </div>
             <div class="right-side">
-                <img src="">
+                <img src="./images/ny.jpeg">
             </div>
         </div>
 
