--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             </h1>
             <div id="info-figures">
                 <div class="info-figure">
-                    <img src="">
+                    <img src="./images/placeholder-image.png">
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-figure">
-                    <img src="">
+                    <img src="./images/placeholder-image.png">
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-figure">
-                    <img src="">
+                    <img src="./images/placeholder-image.png">
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-figure">
-                    <img src="">
+                    <img src="./images/placeholder-image.png">
                     <p class="subtext">this is some subtext under an illustration or image</p>
                 </div>
             </div>
